--- a/public/index.html
+++ b/public/index.html
@@ -98,48 +98,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
-<script>
-  new Vue({
-    el: '#app',
-    data() {
-      return {
-        isDark: true,
-        show: true,
-        todoTitle: '',
-        todos: []
-      }
-    },
-    methods: {
-      addTodo() {
-        const title = this.todoTitle.trim()
-        if (!title) {
-          return
-        }
-        this.todos.push({
-          title: title,
-          id: Math.random(),
-          done: false,
-          date: new Date()
-        })
-        this.todoTitle = ''
-      },
-      removeTodo(id) {
-        this.todos = this.todos.filter(t => t.id !== id)
-      }
-    },
-    filters: {
-      capitalize(value) {
-        return value.toString().charAt(0).toUpperCase() + value.slice(1)
-      },
-      date(value) {
-        return new Intl.DateTimeFormat('ru-RU', {
-          year: 'numeric',
-          month: 'long',
-          day: '2-digit'
-        }).format(new Date(value))
-      }
-    }
-  })
-</script>
+<script src="/app.js"></script>
 </body>
 </html>
